# neural

./: .gitignore  ESTRUTURA_PROJETO.md  FLUXOGRAMA_NEURAL.md  PROMPT_CONTEXTO_IA.md  RUN_GAME.py  RUN_WORLDMAP.py  STRESS_TEST_COMPLETION.txt  TECH_LEAD_PROMPT.py  ai.py  arena.py  armas.json  audio.py  bugfixes_pra_fazer.md  combat.py  config.py  database.py  effects.py  entities.py  main.py  match_config.json  mechanics.py  models.py  personagens.json  physics.py  run.py  simulacao.py  skills.py  view_armas.py  view_chars.py  view_luta.py
neural_v3_rework/: README.md  pyproject.toml  requirements.txt  run.py  run_posto_headless.py  run_posto_pipeline.py  run_posto_simulacao.py  run_postos.py  run_tournament.py
neural_v3_rework/_archive/: README.md
neural_v3_rework/ai/: __init__.py  behavior_profiles.py  brain.py  brain_choreography.py  brain_combat.py  brain_emotions.py  brain_evasion.py  brain_perception.py  brain_personality.py  brain_skills.py  brain_spatial.py  choreographer.py  combat_tactics.py  emotions.py  personalities.py  skill_strategy.py  spatial.py  team_ai.py
neural_v3_rework/core/: arena.py  combat.py  combo.py  divine.py  elo.py  elo_system.py  entities.py  game_feel.py  hazards.py  hitbox.py  magic_system.py  narrator.py  replay.py  skills.py  weapon_analysis.py  weather.py
neural_v3_rework/dados/: __init__.py  app_state.py  armas.json  battle_db.py  battle_log.db  database.py  mapas_campanha.json  match_config.json  match_stats.py  missoes_campanha.json  monstros.json  ondas_horda.json  pacotes_arquetipos.json  papeis_taticos.json  personagens.json  plano_testes_taticos.json  postos_operacao.json  roteiro_execucao.json  templates_composicao_tatica.json  tournament_state.json  world_bridge.py
neural_v3_rework/data/: __init__.py  app_state.py  armas.json  balance.json  battle_db.py  battle_log.db  database.py  elo_rankings.json  gods.json  match_config.json  match_stats.py  personagens.json  tournament_state.json  (+1 more)
(+423 files in other folders)
