[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neural-fights"
version = "3.0.0"
description = "Simulador de combate 2D com IA avançada"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
video = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "ai*", "core*", "data*", "effects*",
    "models*", "simulation*", "tools*",
    "tournament*", "ui*", "utils*",
    "video_pipeline*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
