[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neural-fights"
version = "3.0.0"
description = "Simulador de combate 2D com IA avançada"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
video = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]
worldmap = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "ia*", "nucleo*", "dados*", "efeitos*",
    "modelos*", "simulacao*", "ferramentas*",
    "torneio*", "interface*", "utilitarios*",
    "pipeline_video*", "world_map_pygame*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["tests/_tmp_ui_reports", "_tmp_ui_reports", "tests/.tmp_ui", ".tmp_ui"]
addopts = "-p no:cacheprovider"
